; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/arch/arm/extr_armfbsd-nat.c_fetch_fp_regs.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/arch/arm/extr_armfbsd-nat.c_fetch_fp_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpreg = type { i32 }

@PT_GETFPREGS = common dso_local global i32 0, align 4
@inferior_ptid = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"unable to fetch general registers\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @fetch_fp_regs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fetch_fp_regs() #0 {
  %1 = alloca %struct.fpreg, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @PT_GETFPREGS, align 4
  %5 = load i32, i32* @inferior_ptid, align 4
  %6 = call i32 @PIDGET(i32 %5)
  %7 = ptrtoint %struct.fpreg* %1 to i32
  %8 = call i32 @ptrace(i32 %4, i32 %6, i32 %7, i32 0)
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %2, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %0
  %12 = call i32 @warning(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %15

13:                                               ; preds = %0
  %14 = call i32 @supply_fpregset(%struct.fpreg* %1)
  br label %15

15:                                               ; preds = %13, %11
  ret void
}

declare dso_local i32 @ptrace(i32, i32, i32, i32) #1

declare dso_local i32 @PIDGET(i32) #1

declare dso_local i32 @warning(i8*) #1

declare dso_local i32 @supply_fpregset(%struct.fpreg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
